# CsharpFlow

./: .gitignore  API-DOCUMENTATION.md  CMakeLists.txt  COMPREHENSIVE-TEST-REPORT.md  FOLDER-ARCHITECTURES.md  Flow.csproj  REVIEW.md  Readme.md  TEST-VALIDATION.md  TESTING.md  build.py  demo.py  demo_fast.py  run-tests.sh  run_tests.py
Impl/: DisposableTransient.cs  FlowErrorHandler.cs  FlowExceptions.cs  FlowObjectPool.cs  WeakEventManager.cs
Interfaces/: IDisposableTransient.cs  IFlowException.cs  IFlowLogger.cs  IFlowObjectPool.cs  IWeakEventManager.cs
Logger/: ConsoleLogOutput.cs  DefaultLogFormatter.cs  FlowConsoleLogger.cs  FlowLoggerBase.cs  FlowUnityLogger.cs  Readme.md  UnityLogOutput.cs
TestFlow/: TestFlow.csproj
TestFlow/Editor/: TestAdvancedScenarios.cs  TestNewSystemsIntegration.cs
